--- a/assets/css/container-habilidades.css
+++ b/assets/css/container-habilidades.css
@@ -74,6 +74,13 @@
     }
 }
 
+@media only screen and (max-width: 550px){
+    .container-projetos{
+        max-height: 100vh;
+    }
+
+}
+
 @media only screen and (min-width: 551px) and (max-width: 950px){
     .habilidades h1{
         margin-top: 150px;
