--- a/assets/css/container-inicio.css
+++ b/assets/css/container-inicio.css
@@ -95,7 +95,7 @@
    
     }
     .container-inicio .redes{
-        margin-top: 625px;
+        margin-top: 608px;
         margin-left: 20%;
     }
 
@@ -106,8 +106,8 @@
         margin-top: -16px;
     }
     .txt-apresentacao{
-        position: absolute;
         margin-top: 12px;
+        display: block;
     }
 }
 @media only screen and (min-width: 551px) and (max-width: 950px){
